# footnote-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Modelfile.gemma4-mtp  README.md  agent.command  confidence.py  diagnostics.py  extract.py  fetch.py  footnote_mcp.py  glama.json  pipeline.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements-nli.txt  requirements.txt  rerank.py  run_search.py  scraper.py  search.py  semantic.py  server.json  server.py  test_agent.py  tool_run_report.txt  tools_browser.py  tools_data.py  tools_extra.py  tools_search.py  weboperator_mcp.py
.github/workflows/: publish-docker.yml  publish-mcp-registry.yml  publish-pypi.yml  tests.yml
agent/: agent.py  requirements.txt
benchmarks/: REPORT.md  entailment_cases.json  run_benchmark.py
src/footnote_mcp/: __init__.py  __main__.py  confidence.py  core.py  extract.py  fetch.py  http_server.py  keygen.py  pipeline.py  rerank.py  scraper.py  search.py  semantic.py  server.py  sources.py  tools_data.py  tools_extra.py  tools_search.py
src/footnote_mcp/tools_data/: __init__.py  cache.py  classify.py  dates.py  entailment.py  files.py  health.py  sandbox.py
tests/: conftest.py  test_agent_e2e.py  test_agent_entrypoint.py  test_benchmark.py  test_http_server.py  test_mcp_smoke.py  test_scraper.py  test_search_providers.py  test_semantic.py  test_server_dispatch.py  test_sources.py  test_tools_browser.py  test_tools_data.py  test_tools_extra.py  test_tools_search.py
