[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "footnote-mcp"
version = "1.0.0"
description = "MCP server for source-grounded web research: search, structured-data extraction, evidence verification, and browser automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "web-research", "scraping", "fact-checking", "browser-automation"]

dependencies = [
    "mcp>=1.0.0",
    "ollama>=0.4",
    "playwright>=1.49",
    "curl_cffi>=0.5.10",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "rank-bm25>=0.2",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "xlrd>=2.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "holidays>=0.60",
]

[project.scripts]
footnote-mcp = "footnote_mcp:cli"

[tool.setuptools]
# Flat layout: the runtime is a set of top-level modules. Packaged as py-modules so
# imports (import core, from search import ...) keep working unchanged. Installed in
# an isolated env (uvx/pipx) there is no namespace collision.
py-modules = [
    "footnote_mcp",
    "server",
    "tools_search",
    "tools_browser",
    "tools_data",
    "tools_extra",
    "search",
    "pipeline",
    "fetch",
    "extract",
    "scraper",
    "semantic",
    "rerank",
    "confidence",
    "core",
    "diagnostics",
]
